# ledger-oasis

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.txt  dockerized_build.mk  ledger_app.toml
.circleci/: config.yml
.github/workflows/: check_version.yml  ledger.yml  main.yml
app/: Makefile  Makefile.rust  Makefile.version  README.md  script.ld  script_con.ld  script_val.ld
app/c_api/: rust.c
app/pkg/: installer_XL.sh
app/rust/: Cargo.toml
app/rust/.cargo/: .global-cache
app/rust/include/: rslib.h
app/rust/src/: bolos.rs  lib.rs  panic_handler.rs
app/src/: addr.c  addr.h  apdu_handler.c  coin.h  coin_consumer.h  coin_validator.h  crypto.c  crypto.h  crypto_helper.c  crypto_helper.h  eth_addr.c  eth_addr.h  eth_utils.c  eth_utils.h  glyphs.c  parser.c  parser_consumer.c  parser_impl.c  parser_impl.h  parser_impl_eth.c  parser_impl_eth.h  parser_txdef.h  parser_validator.c  ristretto.c  ristretto.h  view_custom.c  view_custom.h
app/src/c_api/: rust.c
app/src/common/: actions.c  actions.h  app_main.c  app_main.h  main.c  parser.h  parser_common.h  tx.c  tx.h  view.c  view.h  view_internal.h
app/src/consumer/: cbor_helper.h  coin_consumer.h  parser_consumer.c  parser_impl.c  parser_impl.h  parser_impl_con.c  parser_impl_con.h  parser_txdef_con.h
app/src/lib/: vote.c  vote.h  vote_fsm.c  vote_fsm.h  vote_parser.c  vote_parser.h
app/src/validator/: coin_validator.h  parser_impl.c  parser_impl_val.c  parser_impl_val.h  parser_txdef_val.h  parser_validator.c  vote.c  vote.h  vote_fsm.c
cmake/conan/: CMakeLists.txt
docs/: APDUSPEC.md  cipher-transactions-ui.md
js/: README.md  package.json
js/src/: appBase.js  appConsumer.js  appValidator.js  common.js  index.js
js/tests/: basic.spec.js
tests/: cbor_parser.cpp  manual_testvectors.json  oasis_testvectors.json  peda-session-unknown.txt  testcases.json  testcases_bak.json  tx_parse.cpp  tx_parser.cpp  tx_validate.cpp  ui_output.cpp
tests/cpp/: crypto.cpp  entity_metadata_validate.cpp  tx_parser.cpp  ui_output.cpp
tests/cpp_val/: tx_parser.cpp
tests/testvectors/: addr0014_generated.json  generated_entity.json  generated_entity_metadata.json  manual.json  registry.json
tests/tools/: README.md  incomplete_testvectors.json  package-lock.json  package.json  template_testvectors.json  updateManualTestcase.js
tests/util/: base64.h  testcases.cpp  testcases.h
tests/utils/: common.cpp  common.h  testcases.cpp  testcases.h
tests/zemu/: package.json
tests/zemu/tests/: test.js
tests/zemu/tools/: debug.mjs
tests_tools/neon/: package-lock.json  package.json
tests_tools/neon/native/: Cargo.toml
tests_tools/neon/native/src/: lib.rs
tests_zemu/: jest.config.js  package.json
tests_zemu/tests/: 3path.test.ts  adr0008.0.oasis.test.ts  adr0008.0.test.ts  adr0008.5.test.ts  adr0008.test.ts  adr0014.test.ts  common.ts  eth_legacy.test.ts  eth_tests.test.ts  test.js  test.ts  val.test.js  val.test.ts
tests_zemu/tools/: debug.mjs  debug_val.mjs
tools/: template_testvectors.json
