[package]
name = "teststtools"
version = "0.1.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
license = "Apache-2.0"
edition = "2021"
exclude = ["artifacts.json", "index.node"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("default-panic-hook"))'] }

[lib]
name = "teststtools"
crate-type = ["cdylib"]

[dependencies]
neon = "1.0.0"
schnorrkel = "0.11.5"
sha2 = "0.10.9"
